tests/classic_only_missing_annotation/classic_only_missing_annotation.exp
Error ---------------------------------------------------------------------------------------------------- infer.js:4:15

Missing type annotation for `arg`. [missing-annot]

   4|   a: function(arg) {  // missing arg annotation
                    ^^^


Error ---------------------------------------------------------------------------------------------------- infer.js:8:15

Missing type annotation for `arg`. [missing-annot]

   8|   b: function(arg) {  // missing arg annotation
                    ^^^


Error --------------------------------------------------------------------------------------------------- infer.js:32:21

Missing type annotation for `x`. [missing-annot]

   32|     return function(x) {  // missing param annotation
                           ^


Error ------------------------------------------------------------------------------------------- invariant_this.js:10:8

Cannot use `this` [1] in an input position because `this` [1] is expected to occur only in output positions.
[incompatible-variance]

   invariant_this.js:10:8
   10|   m(x: this) { } // error: this in contravariant position
              ^^^^

References:
   invariant_this.js:9:7
    9| class C {
             ^ [1]



Found 4 errors
